# mcp-gateway-registry

./: .bandit  .claudeignore  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  DEV_INSTRUCTIONS.md  Dockerfile  LOCAL_DEPLOYMENT_PORTS.md  Makefile  README.md  build-config.yaml  build_and_run.sh  docker-compose.dhi.yml  docker-compose.federation-test.yml  docker-compose.override.yml  docker-compose.podman.yml  docker-compose.prebuilt.yml  docker-compose.yml  get_asor_token.py  import_server_list.txt  keycloak-integration-summary.md  mcp_cmds.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  terraform-outputs.txt
agents/: agent.py  cli_user_auth.py  client.py  registry_client.py  system_prompt.txt
agents/a2a/: .dockerignore  .env.example  .gitignore  README.md  deploy_live.sh  deploy_local.sh  docker-compose.arm.yml  docker-compose.local.yml  pyproject.toml  shutdown_local.sh
agents/a2a/src/flight-booking-agent/: Dockerfile  __init__.py  agent.py  database.py  dependencies.py  env_settings.py  tools.py
agents/a2a/src/travel-assistant-agent/: Dockerfile  __init__.py  agent.py  database.py  dependencies.py  env_settings.py  models.py  registry_discovery_client.py  remote_agent_client.py  server.py  tools.py
agents/a2a/test/: agent_discovery_test.py  agent_simple_test.py  check_agent_cards.sh  flight_booking_agent_card.json  simple_agents_test.py  travel_assistant_agent_card.json
api/: .network-trusted-token  README.md  USER-GROUP-MANAGEMENT.md  get-m2m-token.sh  openapi.json  populate-registry.sh  registry_client.py  registry_management.py  test-management-api-e2e.sh  test-mcp-client.sh
auth_server/: .env.template  __init__.py  cognito_utils.py  metrics_middleware.py  oauth2_providers.yml  pyproject.toml  scopes.yml  scopes.yml.backup  server.py
charts/: README.md
cli/: agent_mgmt.py  agent_mgmt.sh  anthropic_transformer.py  bootstrap_user_and_m2m_setup.sh  get_user_token.py  import_from_anthropic_registry.sh  mcp_client.py  mcp_security_scanner.py  mcp_utils.py  package-lock.json  package.json  registry_cli_wrapper.py  scan_all_servers.py  service_mgmt.sh  test_a2a_agents.py  test_anthropic_api.py  test_asor_complete.py  test_mcp_gateway.sh
credentials-provider/: add_noauth_services.py  generate_creds.sh  token_refresher.py  utils.py
docker/: 502.html  Dockerfile.auth  Dockerfile.mcp-server  Dockerfile.mcp-server-cpu  Dockerfile.mcp-server-light  Dockerfile.metrics-db  Dockerfile.registry  Dockerfile.registry-cpu  Dockerfile.scopes-init  auth-entrypoint.sh  logrotate-nginx.conf  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf  registry-entrypoint.sh
docs/: FAQ.md  FEATURES.md  OBSERVABILITY.md  README.md  TELEMETRY.md  a2a-agent-management.md  a2a.md  agent-visibility-and-group-access.md  agentcore.md  ai-coding-assistants-setup.md  anthropic-registry-import.md  anthropic_registry_api.md  api-reference.md  architectural-comparison-reverse-proxy-vs-tools-gateway.md  audit-logging.md  auth-mgmt.md  auth.md  (+35 more)
metrics-service/: Dockerfile  add_test_key.py  create_api_key.py  metrics_client.py  migrate.py  pyproject.toml  pytest.ini
metrics-service/app/: config.py  main.py
metrics-service/app/api/: auth.py  routes.py
metrics-service/app/core/: models.py  processor.py  rate_limiter.py  retention.py  validator.py
metrics-service/app/otel/: exporters.py  instruments.py
metrics-service/app/storage/: database.py  migrations.py
metrics-service/app/utils/: helpers.py
metrics-service/docs/: README.md  api-reference.md  data-retention.md  deployment.md
metrics-service/tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_migrations.py  test_processor.py  test_rate_limiter.py  test_retention.py  test_validator.py
servers/mcpgw/: .env.template  README.md  logging_setup.py  models.py  pyproject.toml  server.py
servers/realserverfaketools/: pyproject.toml  server.py
(+779 files in other folders)
