[project]
name = "a2a"
version = "0.1.0"
description = "Travel and Flight Booking Agents"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "strands-agents[a2a]>=0.1.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Local-only project - never resolve from PyPI
package = false