[project]
name = "mcpgw-mcp-server"
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.11.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=15.0.1",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false

